# cpolyfill

./: .clang-format  README.md  meson.build
include/: pf_argparse.h  pf_array.h  pf_assert.h  pf_attribute.h  pf_bitwise.h  pf_cpuinfo.h  pf_ctype.h  pf_dirent.h  pf_dlsym.h  pf_endian.h  pf_errno.h  pf_exception.h  pf_macro.h  pf_overflow.h  pf_pipe.h  pf_semaphore.h  pf_socket.h  pf_string.h  pf_test.h  pf_threads.h  pf_typeid.h  pf_types.h
test/: bitwise.c  ctype.c  endian.c  macro.c  main.c  overflow.c
